<resources>
    <string name="app_name">BookCase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Some User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_books">Library</string>
    <string name="title_activity_mylib_activity">mylib_activity</string>
    <string name="title_activity_mylib">activity_mylib</string>

    <string name="newbook_text">New Book</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="short_desc">Description:</string>
    <string name="img_url">Image url:(for example qwe.com/photo.png)</string>


    <string name="delete_text">Delete</string>
    <string name="edit_text">Edit</string>

    <string name="tv_nomatches">Any Matches</string>



    <string name="book_status_Text">On the self:</string>
    <string name="book_status_Unread">Unread</string>
    <string name="book_status_WannaRead">I want to read</string>
    <string name="book_status_ReadingNow">Im reading now</string>
    <string name="book_status_alreadyRead">I have read</string>
    <string name="book_finishDate">I finished:</string>


    <string name="showText">show</string>
    <string name="sortByText">sort</string>
    <string name="onshelvesText">on shelves from</string>
    
    <string-array name="showArgs">
        <item>Show</item>
        <item>All</item>
        <item>1 star</item>
        <item>2 stars</item>
        <item>3 stars</item>
        <item>4 stars</item>
        <item>5 stars</item>
    </string-array>

    <string-array name="sortByArgs">
        <item>Sort By</item>
        <item>Alphabetical title</item>
        <item>Alphabetical author</item>
    </string-array>

    <string-array name="sortByOnlyFinished">
        <item>Sort By</item>
        <item>Date read</item>
        <item>Alphabetical title</item>
        <item>Alphabetical author</item>
        <item>Rate</item>
    </string-array>
    

    <string-array name="onshelvesFromArgs">
        <item>On shelves from</item>
        <item>All days</item>
        <item>7 days</item>
        <item>14 days</item>
        <item>30 days</item>
        <item>Last year</item>
    </string-array>

    <string-array name="Book_State">
        <item>Not readen</item>
        <item>Finished</item>
        <item>Reading now</item>
        <item>Wants to read</item>
    </string-array>
    
    
    <string name="shelvesAll">All</string>
    <string name="shelvesFinished">Finished</string>
    <string name="shelvesReadingNow">Now reading</string>
    <string name="shelvesWantsToRead">Want to read</string>
    <string name="shelvesHas">I have</string>
    <string name="shelvesFavors">Favorites</string>




    <string-array name="user_book_state">
        <item>Finished</item>
        <item>Reading now</item>
        <item>Wants to read</item>
        <item>Not added</item>
    </string-array>

    <string-array name="user_book_shelfs">
        <item>Favorites</item>
        <item>I have</item>
    </string-array>

    <string name="rateText">Rate</string>
    <string name="Shelf">Shelf:</string>
    <string name="mShelfs">My shelfs:</string>


    <string name="saveButtonText">Save</string>
    
    <string name="finish_readingtext">When I finished reading</string>


</resources>
