<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <item android:title="Bookcase">
        <menu>
            <item
                android:id="@+id/AllUserBooks"
                android:icon="@drawable/ic_border"
                android:checkable="true"
                android:title="@string/shelvesAll" />
            <item
                android:id="@+id/FinishedBooks"
                android:icon="@drawable/ic_finished"
                android:checkable="true"
                android:title="@string/shelvesFinished" />
            <item
                android:id="@+id/NowReadingBooks"
                android:icon="@drawable/ic_current"
                android:checkable="true"
                android:title="@string/shelvesReadingNow" />
            <item
                android:id="@+id/WantToReadBooks"
                android:icon="@drawable/ic_wantread"
                android:checkable="true"
                android:title="@string/shelvesWantsToRead" />
            <item
                android:id="@+id/HaveBooks"
                android:icon="@drawable/ic_store"
                android:checkable="true"
                android:title="@string/shelvesHas" />
            <item
                android:id="@+id/FavorBooks"
                android:icon="@drawable/ic_star"
                android:checkable="true"
                android:title="@string/shelvesFavors" />
        </menu>
    </item>



     </menu>
